--- a/package.json
+++ b/package.json
@@ -14,22 +14,28 @@
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@stripe/stripe-js": "^1.54.2",
+    "@upstash/redis": "^1.34.3",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cross-env": "^7.0.3",
     "lucide-react": "^0.471.0",
     "next": "15.1.4",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "openai": "^4.78.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
+    "stripe": "^17.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "youtube-transcript": "^1.2.1",
     "youtube-transcript-api": "^1.1.2",
-    "cross-env": "^7.0.3"
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
