--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,8 +2,6 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "@typescript-eslint/no-unused-vars": "off",
-    "@typescript-eslint/no-explicit-any": "off",
-    "react-hooks/exhaustive-deps": "error",
-    "react/no-unescaped-entities": "error"
+    "@typescript-eslint/no-explicit-any": "off"
   }
 } 
