--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "NODE_NO_WARNINGS=1 next build",
+    "build": "cross-env NODE_NO_WARNINGS=1 next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "npm dedupe",
@@ -24,7 +24,6 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cross-env": "^7.0.3",
     "lucide-react": "^0.471.0",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
@@ -46,6 +45,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "critters": "^0.0.23",
+    "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
