--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prebuild": "npm run clean"
+    "prebuild": "npm run clean",
+    "clean": "rimraf .next"
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
