--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prebuild": "npm run clean",
-    "clean": "rimraf .next"
+    "lint": "next lint"
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
