--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
-    "openai": "^4.78.1",
+    "node-fetch": "^3.3.2",
+    "openai": "^4.79.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
