--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.0.0",
     "lucide-react": "^0.471.0",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
